--- a/views/layout.pug
+++ b/views/layout.pug
@@ -45,7 +45,7 @@ html
                 li
                   a(href='./' class=(route === '/') ? 'nav active' : 'nav') Help
               li
-                a(href='./myDocuments' class=(route === '/myDocuments') ? 'nav active' : 'nav') My documents
+                a(href=(route === '/backoffice/upload' || route === '/backoffice/accounts') ? '../myDocuments' : './myDocuments') class=(route === '/myDocuments') ? 'nav active' : 'nav') My documents
               if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
                 li
                   a(href=(route === '/backoffice/upload' || route === '/backoffice/accounts') ? '../documents' : './documents') class=(route === '/documents') ? 'nav active' : 'nav') All documents
@@ -55,9 +55,9 @@ html
                 li
                   a(href='./backoffice/accounts' class=(route === '/backoffice/accounts') ? 'nav active' : 'nav') Accounts
               li
-                a(href='./settings' class=(route === '/settings') ? 'nav active' : 'nav') Settings
+                a(href=(route === '/backoffice/upload' || route === '/backoffice/accounts') ? '../settings' : './settings') class=(route === '/settings') ? 'nav active' : 'nav') Settings
               li
-                a(href='./signout' class=(route === '/signout') ? 'nav active' : 'nav') Sign out
+                a(href=(route === '/backoffice/upload' || route === '/backoffice/accounts') ? '../signout' : './signout') class=(route === '/signout') ? 'nav active' : 'nav') Sign out
             else
               li
                 a(href='./signup' class=(route === '/signup') ? 'nav active' : 'nav') Sign up
